--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,4 +314,70 @@ input {
   font-weight: 400;
   font-size: 24px;
   line-height: 133%;
+  max-width: 610px;
+}
+
+.features {
+  background-color: #F5F5F5;
+}
+.features__wrap {
+  padding: 30px 0;
+}
+.features__title {
+  text-align: center;
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 46px;
+  line-height: 116%;
+  color: #000;
+  margin-bottom: 43px;
+}
+.features__first-row {
+  display: flex;
+  gap: 30px;
+  margin-bottom: 30px;
+}
+.features__public-card {
+  background-color: #fff;
+  border-radius: 32px;
+  padding: 33px 0 11px 24px;
+}
+.features__like-card {
+  background-color: #fff;
+  border-radius: 32px;
+  padding: 33px 0 11px 24px;
+}
+.features__quiz-card {
+  background-color: #fff;
+  border-radius: 32px;
+  padding: 33px 0 11px 24px;
+}
+.features__icon {
+  padding-bottom: 10px;
+}
+.features__text {
+  font-family: Montserrat;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 133%;
+  color: #080808;
+}
+.features__second-row {
+  display: flex;
+  gap: 30px;
+}
+.features__excel-card-4 {
+  background-color: #fff;
+  border-radius: 32px;
+  padding: 33px 0 11px 24px;
+}
+.features__people-card-5 {
+  background-color: #fff;
+  border-radius: 32px;
+  padding: 33px 0 11px 24px;
+}
+.features__record-card-6 {
+  background-color: #fff;
+  border-radius: 32px;
+  padding: 33px 0 11px 24px;
 }
