--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -347,7 +347,7 @@ input{
 
     &__digital-block{
         padding-left: 110px;
-         background-color: #fff;
+        background-color: #fff;
     }
 
     &__digital-box-title{
@@ -364,7 +364,83 @@ input{
         font-weight: 400;
         font-size: 24px;
         line-height: 133%;
+        max-width: 610px;
+    }
+}
+
+
+.features{
+    background-color: #F5F5F5;
+    &__wrap{
+        padding: 30px 0;
+    }
+    &__title{
+        text-align: center;
+        font-family: Inter;
+        font-weight: 600;
+        font-size: 46px;
+        line-height: 116%;
+        color: #000;
+        margin-bottom: 43px;
     }
 
-    
+    &__first-row{
+        display: flex;
+        gap: 30px;
+        margin-bottom: 30px;
+    }
+
+    &__public-card{
+        background-color: #fff;
+        border-radius: 32px;
+        padding: 33px 0 11px 24px;
+    }
+
+    &__like-card{
+        background-color: #fff;
+        border-radius: 32px;
+        padding: 33px 0 11px 24px;
+    }
+
+    &__quiz-card{
+        background-color: #fff;
+        border-radius: 32px;
+        padding: 33px 0 11px 24px;
+
+    }
+
+    &__icon{
+        padding-bottom: 10px;
+    }
+
+    &__text{
+        font-family: Montserrat;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 133%;
+        color: #080808;
+
+    }
+    &__second-row{
+        display: flex;
+        gap: 30px;
+    }
+
+    &__excel-card-4{
+        background-color: #fff;
+        border-radius: 32px;
+        padding: 33px 0 11px 24px;
+    }
+
+    &__people-card-5{
+        background-color: #fff;
+        border-radius: 32px;
+        padding: 33px 0 11px 24px;
+    }
+
+    &__record-card-6{
+        background-color: #fff;
+        border-radius: 32px;
+        padding: 33px 0 11px 24px;
+    }
 }
