--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -348,6 +348,7 @@ input{
     &__digital-block{
         padding-left: 110px;
         background-color: #fff;
+        border-radius: 12px;
     }
 
     &__digital-box-title{
@@ -442,5 +443,150 @@ input{
         background-color: #fff;
         border-radius: 32px;
         padding: 33px 0 11px 24px;
+    }
+}
+
+.form{
+    &__box{
+        padding: 64px 0;
+    }
+
+    &__title{
+        font-family: Inter;
+        font-weight: 400;
+        font-size: 46px;
+        line-height: 117%;
+        text-align: center;
+        margin-bottom: 32px;
+    }
+
+    &__sub-title{
+        font-family: Montserrat;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 144%;
+        text-align: center;
+        color: rgba(8, 8, 8, 0.56);
+        margin-bottom: 32px;
+    }
+
+    &__input{
+        max-width: 790px;
+        margin: 0 auto;
+    }
+
+    &__input{
+        &-text{
+            font-family: Montserrat;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 125%;
+            margin-bottom: 8px;
+        }
+        &-block{
+            border-radius: 12px;
+            width: 788px;
+            height: 48px;
+            box-shadow: inset 0 0 0 1px rgba(8, 8, 8, 0.12);
+            background: rgba(255, 255, 255, 0);
+            padding: 10px 16px;
+            margin-bottom: 32px;
+        }
+    }
+
+    &__label{
+        display: flex;
+        gap: 12px;
+        margin-bottom: 32px;
+    }
+
+    &__checkbox{
+       
+       width: 20px;
+       height: 20px;
+       all: initial;
+       appearance: checkbox;
+       &-text{
+        font-family: Montserrat;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 125%;
+        color: rgba(8, 8, 8, 0.56);
+       }
+       
+    }
+    &__btn-box{
+        display: flex;
+        justify-content: center;
+       }
+}
+
+.footer{
+    background-color: #262626;
+    &__logo{
+        margin-top: 35px;
+        margin-bottom: 30px;
+        margin-left: 52px;
+    }
+    &__wrap{
+        margin: 0 50px;
+        display: flex;
+        gap: 240px;
+        padding-bottom: 68px;
+    }
+    &__title{
+        font-family: Montserrat;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 150%;
+        color: #fff;
+        margin-bottom: 25px;
+    }
+
+    &__tg{
+        display: flex;
+        align-items: center;
+    }
+
+    &__icon{
+        width: 17px;
+        height: 17px;
+        margin-right: 8px;
+    }
+
+    &__link{
+        display: flex;
+        flex-direction: column;
+        font-family: Montserrat;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 150%;
+        color: #fff;
+        opacity: 70%;
+        &-block{
+            display: flex; 
+            flex-direction: column;
+            gap: 25px;
+        }
+        
+    }
+
+    &__hr{
+        width: 1110px;
+        margin: 0 52px;
+
+    }
+
+    &__info{
+        margin: 0 52px;
+        padding: 30px 0;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__politic{
+        max-width: 200px;
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
     }
 }
