--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,7 +59,11 @@ input{
 
 
 .connect{
+    position: fixed;
+    z-index: 1000;
+    opacity: 85%;
     height: 48px;
+    width: 100%;
     background-color: #171717;
     display: flex;
     align-items: center;
@@ -94,6 +98,7 @@ input{
 }
 
 .main{
+    padding-top: 48px;
     background-color: #262626;
     &__wrap{
         display: flex;
